dvdbackup (0.4-2) UNRELEASED; urgency=low

  * debian/control: Update my e-mail address.

 -- Benjamin Drung <bdrung@ubuntu.com>  Thu, 28 May 2009 19:55:07 +0200

dvdbackup (0.4-1) unstable; urgency=low

  [ Benjamin Drung ]
  * New upstream version
  * debian/control:
    - Update Debian Standards-Version to 3.8.1
    - Add Homepage and Vcs-{Browser,Svn} fields
    - Add myself to Uploaders
    - Add cdbs to Build-Depends
    - Add ${misc:Depends} to Depends
    - Build-Depends on newer libdvdread-dev (Closes: #516825)
    - dvdbackup-dev needs to depend on same version of dvdbackup
    - Adjust section to the new sections in Debian
  * Add newline to the end of debian/watch
  * debian/rules: Switch to cdbs (Closes: #506600)
  * debian/dvdbackup.{dirs,docs,manpages}: Removed
  * debian/dvdbackup.install: Updated for cdbs
  * debian/copyright: Updated year and corrected link to GPL

  [ Stephen Gran ]
  * Prep for release

 -- Stephen Gran <sgran@debian.org>  Fri, 27 Mar 2009 10:41:51 -0400

dvdbackup (0.2-2) unstable; urgency=low

  * Pass CFLAGS to build system, don't override them

 -- Stephen Gran <sgran@debian.org>  Tue, 01 Apr 2008 23:19:25 +0100

dvdbackup (0.2-1) unstable; urgency=low

  * New upstream version
  * Mandatory switches are now gone (closes: #469337, #470049)
  * Update debian/copyright to reflect new upstream
  * Update debian/rules to reflect new build system

 -- Stephen Gran <sgran@debian.org>  Tue, 11 Mar 2008 02:09:51 +0000

dvdbackup (0.1.1-12) unstable; urgency=low

  * Output an error message when DVDOpen fails (closes: #464520)

 -- Stephen Gran <sgran@debian.org>  Mon, 03 Mar 2008 02:26:03 +0000

dvdbackup (0.1.1-11) unstable; urgency=low

  * dvdbackup-dbg Depends on dvdbackup (closes: #463179)
  * s/mkisofs/genisoimage/g (closes: #415770)
  * Handle short reads from DVDReadBlocks (closes: #419670)
  * Handle broken ifo/bup files (closes: #467075)
  * Modify Build-Depends to not use the -1 revision