@@ -3,3 +3,13 @@
 include /usr/share/cdbs/1/rules/debhelper.mk
 include /usr/share/cdbs/1/class/autotools.mk
 
+DEB_INSTALL_DOCS_ALL = changelog
+
+clean::
+	rm -f changelog
+
+build/dvdbackup::
+	cp ChangeLog changelog
+
+build/dvdbackup-doc::
+	cp ChangeLog changelog
